--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,10 @@ repositories {
 }
 
 dependencies {
-    // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.13'
-    testCompile 'junit:junit:4.12'
-
     compile 'com.jayway.restassured:json-path:2.7.0'
     compile 'com.jayway.restassured:xml-path:2.7.0'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.assertj:assertj-core:3.2.0'
     testCompile 'com.jayway.restassured:rest-assured:2.7.0'
     testCompile 'com.jayway.restassured:json-schema-validator:2.7.0'
 }
